<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Add File Taint</string>
    <string name="action_settings">Settings</string>
    <string name="info">Info</string>
    <string name="taint">Taint</string>
    <string name="refresh">Refresh</string>
    <string name="directory">&lt;directory&gt;</string>
    <string name="share">Share</string>
    <string name="directorylist">&lt;Refresh&gt;</string>
    <string name="filename">Taint_</string>
    <string name="shared">Shared</string>
    <string name="download">Dwnld</string>
    <string name="pictures">Pics</string>
    <string name="delete">Delete</string>
    <string name="dcimcamera">DCIM</string>

</resources>
