<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.captaindan.addfiletaint.MainActivity" >

    <Button
        android:id="@+id/info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="infoPress"
        android:text="@string/info" />

    <EditText
        android:id="@+id/filename_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/info_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:text="@string/filename" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/directorylist_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/refresh_button"
        android:layout_marginTop="16dp"
        android:text="@string/directorylist" />

    <Button
        android:id="@+id/sharedfldr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="sharedFldrPress"
        android:text="@string/shared" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/picturesFldr_button"
        android:onClick="refreshPress"
        android:text="@string/refresh" />

    <EditText
        android:id="@+id/directory_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/refresh_button"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:text="@string/directory" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/info_button"
        android:layout_toRightOf="@+id/info_button"
        android:onClick="sharePress"
        android:text="@string/share" />

    <Button
        android:id="@+id/taint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/share_button"
        android:layout_toRightOf="@+id/share_button"
        android:onClick="taintPress"
        android:text="@string/taint" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="deletePress"
        android:text="@string/delete" />

    <Button
        android:id="@+id/downloadFldr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/sharedfldr_button"
        android:layout_toRightOf="@+id/sharedfldr_button"
        android:onClick="downloadFldrPress"
        android:text="@string/download" />

    <Button
        android:id="@+id/picturesFldr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/dcimFldr_button"
        android:layout_toRightOf="@+id/dcimFldr_button"
        android:onClick="picturesFldrPress"
        android:text="@string/pictures" />

    <Button
        android:id="@+id/dcimFldr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/downloadFldr_button"
        android:layout_toRightOf="@+id/downloadFldr_button"
        android:onClick="dcimcameraFldrPress"
        android:text="@string/dcimcamera" />

</RelativeLayout>
